--- a/src/pages/Home/sections/Hero/styles/animations.css
+++ b/src/pages/Home/sections/Hero/styles/animations.css
@@ -27,4 +27,24 @@
   .slide-right {
     animation: slideInRight 0.8s ease-out forwards;
   }
-  
+
+  .bounce-icon {
+  opacity: 0;
+  animation: bounceIn 0.6s forwards;
+  animation-timing-function: cubic-bezier(0.68, -0.55, 0.27, 1.55);
+}
+
+@keyframes bounceIn {
+  0% {
+    opacity: 0;
+    transform: translateX(100px); 
+  }
+  60% {
+    opacity: 1;
+    transform: translateX(-10px); 
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);  
+  }
+}
